--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
             <!-- SLIDE 1: Title & Contact (includes your email explicitly) -->
             <section>
+                <h5>23f3000339@ds.study.iitm.ac.in</h5>
+                <h6>(23f3000339@ds.study.iitm.ac.in)</h6>
                 <h1>Q3 Earnings Report</h1>
                 <h3>Technical Analysis & Forecasting</h3>
                 <p>
