--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <h5>(23f3000339@ds.study.iitm.ac.in)</h5>
-    <h1>(23f3000339@ds.study.iitm.ac.in)</h1>
+    <h1>23f3000339@ds.study.iitm.ac.in</h1>
 
     <!-- Persistent Email Footer (visible on all slides) -->
     <div class="fixed-footer">
