--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p class="subtitle">Interactive Stakeholder Presentation (Reveal.js)</p>
         <p>
           Presented by:<br>
-          <strong>Bipul Lahiri</strong><br>
+          <strong>shreedeep M</strong><br>
           <small>Email: <a href="mailto:23f3000339@ds.study.iitm.ac.in">23f3000339@ds.study.iitm.ac.in</a></small>
         </p>
         <aside class="notes">
